--- a/arirang/index.html
+++ b/arirang/index.html
@@ -1,99 +1,152 @@
 <!doctype html>
-<html lang="en"><!-- InstanceBegin template="/Templates/projects.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+
+
 <head>
-	<meta charset="utf-8">
-	<title>Darin E. Reyes</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--Libraries-->
-	<!--jQuery-->
-    <script type="text/javascript" src="../lib/jquery-3.2.1.min.js"></script>
-	<!--Typekit-->
-	<script src="https://use.typekit.net/ftq0ggh.js"></script>
-	<script>try{Typekit.load({ async: true });}catch(e){}</script>
-  	<!--JS-->
-  	<script src="../js/main.js" type="text/javascript"></script>
-  	<!--CSS-->
-   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   	<link rel="stylesheet" href="../css/main.css"/>
-   	<link rel="stylesheet" href="../css/loading.css"/>
-   	<link rel="stylesheet" href="../css/header.css"/>
-    <!--Favicon-->
-    <link rel="shortcut icon" href="images/favicon.png" type="image/png"/>
-    <!--Google analytics-->
-    <script>
-        console.log('analytics');
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-85708609-1', 'auto');
-        ga('send', 'pageview');
-    </script>
-	<!--Space for extra scripts-->
-	
-	<!--Make this uneditable with  -->
-	<link rel="stylesheet" href="../css/project.css"/>
-	<script type="text/javascript" src="../js/projects.js"></script>
-	<!-- InstanceBeginEditable name="subHead" -->
-	
-	<!-- InstanceEndEditable -->
-	
+  <base href="../" />
+
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Darin E. Reyes / Arirang Visualization</title>
+  <!--libs-->
+  <!--jquery-->
+  <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+  <!--typekit-->
+  <script src='https://use.typekit.net/ftq0ggh.js'></script>
+  <script>
+    try {
+      Typekit.load({
+        async: true
+      });
+    } catch (e) {}
+
+  </script>
+  <!--Favicon-->
+  <link rel='shortcut icon' href='images/favicon.png' type='image/png' />
+  <!--Google analytics-->
+  <script>
+    console.log('analytics');
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-85708609-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+  <!--fontawesome-->
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+
+  <!--css-->
+  <link rel='stylesheet' href='css/loading.css' />
+  <link rel='stylesheet' href='css/components.css' />
+  <link rel='stylesheet' href='css/typography.css' />
+  <link rel='stylesheet' href='css/utilities.css' />
+  <link rel='stylesheet' href='css/structure.css' />
+  <link rel='stylesheet' href='css/header.css' />
 </head>
+
 <body>
-<header>
-	<div id="topDesktop">
-		<div id="topMobile">
-			<a href="../index.html" class="button" id="pageName">Darin E. Reyes Design</a>
-   			<a class="button" id="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></a>
-   		</div>
-   		<nav id="tabs">
-        	<a class="button" sort="work" href="../index.html#work">Work</a>
-        	<a class="button" sort="aboutMe" href="../index.html#aboutMe">About Me</a>
-        	<a class="button" sort="contact" href="../index.html#contact">Contact</a>
-        	<a class="button" sort="all" href="../index.html#all">All</a>
-    	</nav>
-	</div>
-    	<nav id="social">
-        	<a class="button" href="http://facebook.com/dereyesdesign">
-        		<i class="fa fa-facebook-official"></i>
-        	</a>
-        	<a class="button" href="http://instagram.com/dereyesdesign">
-        		<i class="fa fa-instagram"></i>
-        	</a>
-        	<a class="button" href="https://twitter.com/dereyesdesign">
-        		<i class="fa fa-twitter"></i>
-        	</a>
-    	</nav>
-</header>
-<div id="content">
-   <section id="loading">
-		<img src="../images/loading.gif">
-	</section>
-    
-    <!--Make this uneditable with  -->
-    <!-- InstanceBeginEditable name="subContent" -->
-	<article class="projectData" projectTag="arirang"></article>
-	<article>
-		<h2>Process</h2>
-		<p>Violinist and songwriter Joe Kye enlisted me to design and code a live audio visualization to accompany his song “Arirang”. The song was inspired by his life as a Korean immigrant and a Korean folk song of the same name. I worked to not just visualize Joe's music, but to visualize the the story behind the song as well.</p>
-		<iframe class="instagram-media instagram-media-rendered" id="instagram-embed-0" src="https://www.instagram.com/p/BGNPpXtEd7C/embed/?cr=1&amp;v=7&amp;wp=747#%7B%22ci%22%3A0%2C%22os%22%3A1839.4%7D" allowtransparency="true" frameborder="0" height="343" data-instgrm-payload-id="instagram-media-payload-0" scrolling="no" style="background: rgb(255, 255, 255); border: 1px solid rgb(219, 219, 219); margin: 1px 1px 12px; max-width: 658px; width: calc(100% - 2px); border-radius: 4px; box-shadow: none; display: block; padding: 0px;"></iframe>
-		<p>Joe and I met while I was collaborating on a visualization with Jiayi and Shih-Wen Young for a different song. Above is a video of us testing my code for that project. A week before the performance, I was charged with developing the visuals for “Arirang” on my own.</p>
-		<img src="images/1.jpg" alt="The spritesheet used in the visualization">
-		<p>The visualization combined pre-rendered sprites created in Adobe Illustrator with elements generated live within Processing. Each element was created or modified using audio input from Joe's performance.</p>
-		<p>Joe had heard the folk song as a child, when his mother would hum it as she carried him on her back. The project gave us an opportunity to learn more about the song's history and significance, which helped us add meaning to the performance and visualization.</p>
-	</article>
-    <!-- InstanceEndEditable -->
-    <article id="clickouts">
-		<a class="button" href="../index.html">Home</a>
-	</article>	
-	
-</div>
+
+  <section id='loading'>
+    <img src='images/loading.gif' alt='now loading'>
+  </section>
+  <div id="content">
+    <section class="tiles">
+
+      <div class='tileText col-100 row-auto p-b-0'>
+        <a href='index.html'>
+      <img src='images/catface.png' id='catface'>
+    </a>
+      </div>
+    </section>
+    <section class="tiles">
+      <div class="tileText col-100">
+
+        <h1>Arirang Visualization</h1>
+        <p>Live interactive concert visuals</p>
+        <div class='video video-16x9'><iframe src='https://www.youtube.com/embed/u4dnh7r_6Wg' frameborder='0' allowfullscreen></iframe></div>
+        <i class='fa fa-caret-up' aria-hidden='true'></i>
+        <p class='caption'>A video of the performance on June 10, 2016.</p>
+        <table>
+          <tr>
+            <td>
+              <h3>Client</h3>
+            </td>
+            <td>
+              <p>Joe Kye</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <h3>Role</h3>
+            </td>
+            <td>
+              <p>Coder, Visual Designer, Video Jockey</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <h3>Tools</h3>
+            </td>
+            <td>
+              <p>Adobe Illustrator, Processing</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <h3>Status</h3>
+            </td>
+            <td>
+              <p>Presented at the #SeedToSprout benefit concert, Spring 2016</p>
+            </td>
+          </tr>
+        </table>
+        <h2>Process</h2>
+        <p>Violinist and songwriter Joe Kye enlisted me to design and code a live audio visualization to accompany his song “Arirang”. The song was inspired by his life as a Korean immigrant and a Korean folk song of the same name. I worked to not just visualize Joe's music, but to visualize the the story behind the song as well.</p>
+        <iframe class="instagram-media instagram-media-rendered" id="instagram-embed-0" src="https://www.instagram.com/p/BGNPpXtEd7C/embed/?cr=1&amp;v=7&amp;wp=747#%7B%22ci%22%3A0%2C%22os%22%3A1839.4%7D" allowtransparency="true" frameborder="0" height="343" data-instgrm-payload-id="instagram-media-payload-0" scrolling="no" style="background: rgb(255, 255, 255); border: 1px solid rgb(219, 219, 219); margin: 1px 1px 12px; max-width: 658px; width: calc(100% - 2px); border-radius: 4px; box-shadow: none; display: block; padding: 0px;"></iframe>
+        <p>Joe and I met while I was collaborating on a visualization with Jiayi and Shih-Wen Young for a different song. Above is a video of us testing my code for that project. A week before the performance, I was charged with developing the visuals for “Arirang” on my own.</p>
+        <img src="arirang/images/1.jpg" alt="The spritesheet used in the visualization">
+        <p>The visualization combined pre-rendered sprites created in Adobe Illustrator with elements generated live within Processing. Each element was created or modified using audio input from Joe's performance.</p>
+        <p>Joe had heard the folk song as a child, when his mother would hum it as she carried him on her back. The project gave us an opportunity to learn more about the song's history and significance, which helped us add meaning to the performance and visualization.</p>
+      </div>
+      <div class="tileText col-100 row-auto">
+        <a class='button' href='disquiet/index.html'>Previous project: DisQuiet Prototype</a> <a class='button' href='fishyflop/index.html'>Next project: Fishy Flop</a> </div>
+    </section>
+    <section class="tiles">
+
+      <div class="tileText col-100 row-auto p-t-0">
+        <p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
+
+        <a class="button button-pink" href="index.html">Work</a>
+
+        <a class="button button-green" href="about/index.html">About me</a>
+
+        <a class="button button-cyan" href="contact/index.html">Contact</a>
+
+        <a class="button" href="https://www.facebook.com/dereyesdesign">
+      <i class="fa fa-facebook-official"></i>
+    </a>
+
+        <a class="button" href="https://www.instagram.com/dereyesdesign/">
+      <i class="fa fa-instagram"></i>
+    </a>
+
+        <a class="button" href="https://twitter.com/dereyesdesign">
+      <i class="fa fa-twitter"></i>
+    </a>
+      </div>
+    </section>
+  </div>
 </body>
-<!-- InstanceEnd --></html>
+
+</html>
