--- a/fishyflop/index.html
+++ b/fishyflop/index.html
@@ -1,123 +1,170 @@
 <!doctype html>
-<html lang="en"><!-- InstanceBegin template="/Templates/projects.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+
+
 <head>
-	<meta charset="utf-8">
-	<title>Darin E. Reyes</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--Libraries-->
-	<!--jQuery-->
-    <script type="text/javascript" src="../lib/jquery-3.2.1.min.js"></script>
-	<!--Typekit-->
-	<script src="https://use.typekit.net/ftq0ggh.js"></script>
-	<script>try{Typekit.load({ async: true });}catch(e){}</script>
-  	<!--JS-->
-  	<script src="../js/main.js" type="text/javascript"></script>
-  	<!--CSS-->
-   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   	<link rel="stylesheet" href="../css/main.css"/>
-   	<link rel="stylesheet" href="../css/loading.css"/>
-   	<link rel="stylesheet" href="../css/header.css"/>
-    <!--Favicon-->
-    <link rel="shortcut icon" href="../gato/images/favicon.png" type="image/png"/>
-    <!--Google analytics-->
-    <script>
-        console.log('analytics');
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-85708609-1', 'auto');
-        ga('send', 'pageview');
-    </script>
-	<!--Space for extra scripts-->
-	
-	<!--Make this uneditable with  -->
-	<link rel="stylesheet" href="../css/project.css"/>
-	<script type="text/javascript" src="../js/projects.js"></script>
-	<!-- InstanceBeginEditable name="subHead" -->
-	
-	<!-- InstanceEndEditable -->
-	
+  <base href="../" />
+
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Darin E. Reyes / Fishy Flop</title>
+  <!--libs-->
+  <!--jquery-->
+  <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+  <!--typekit-->
+  <script src='https://use.typekit.net/ftq0ggh.js'></script>
+  <script>
+    try {
+      Typekit.load({
+        async: true
+      });
+    } catch (e) {}
+
+  </script>
+  <!--Favicon-->
+  <link rel='shortcut icon' href='images/favicon.png' type='image/png' />
+  <!--Google analytics-->
+  <script>
+    console.log('analytics');
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-85708609-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+  <!--fontawesome-->
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+
+  <!--css-->
+  <link rel='stylesheet' href='css/loading.css' />
+  <link rel='stylesheet' href='css/components.css' />
+  <link rel='stylesheet' href='css/typography.css' />
+  <link rel='stylesheet' href='css/utilities.css' />
+  <link rel='stylesheet' href='css/structure.css' />
+  <link rel='stylesheet' href='css/header.css' />
 </head>
+
 <body>
-<header>
-	<div id="topDesktop">
-		<div id="topMobile">
-			<a href="../index.html" class="button" id="pageName">Darin E. Reyes Design</a>
-   			<a class="button" id="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></a>
-   		</div>
-   		<nav id="tabs">
-        	<a class="button" sort="work" href="../index.html#work">Work</a>
-        	<a class="button" sort="aboutMe" href="../index.html#aboutMe">About Me</a>
-        	<a class="button" sort="contact" href="../index.html#contact">Contact</a>
-        	<a class="button" sort="all" href="../index.html#all">All</a>
-    	</nav>
-	</div>
-    	<nav id="social">
-        	<a class="button" href="http://facebook.com/dereyesdesign">
-        		<i class="fa fa-facebook-official"></i>
-        	</a>
-        	<a class="button" href="http://instagram.com/dereyesdesign">
-        		<i class="fa fa-instagram"></i>
-        	</a>
-        	<a class="button" href="https://twitter.com/dereyesdesign">
-        		<i class="fa fa-twitter"></i>
-        	</a>
-    	</nav>
-</header>
-<div id="content">
-   <section id="loading">
-		<img src="../images/loading.gif">
-	</section>
-    
-    <!--Make this uneditable with  -->
-    <!-- InstanceBeginEditable name="subContent" -->
-    <article class="projectData" projectTag="fishyFlop"></article>
-	<article>
-		<h2>Concept</h2>
-		<p><i>Fishy Flop</i> is a fin-tastic mobile game by The Fishy Flop Team. The game combines the physics of games like <i>Angry Birds</i> with the quirky controls of games like <i>QWOP</i>.</p>
-		<p>I ensured that the game featured intuitive interfaces and vibrant, contemporary visuals.</p>
-	</article>
-  	<article>
-		<h2>The Fishy Flop Team</h2>
-		<ul>
-			<li><a href="https://www.linkedin.com/in/brian-mah-633b39126/">Brian Mah</a>, Lead Developer</li>
-			<li><a href="https://www.linkedin.com/in/alex-jungroth-561282112/">Alex Jungroth</a>, Developer</li>
-			<li>Daniel Schlesinger, Developer</li>
-			<li><a href="https://jordanhmusic.com/">Jordan Henderson</a>, Music, Audio</li>
-			<li>Me, Visuals and Interfaces</li>
-		</ul>
-	</article>
-   	<article>
-   		<h2>Samples</h2>
-   		
-   		<img src="images/1.jpg" alt="world 1 assets">
-   		<img src="images/2.jpg" alt="world 1 assets">
-   		<i class="fa fa-caret-up" aria-hidden="true"></i>
-   		<p class="caption">Two styles were established to differentiate background and foreground elements.</p>
-   		<img src="images/3.jpg" alt="ui assets">
-   		<img src="images/5.jpg" alt="world 1 assets">
-   		<img src="images/4.jpg" alt="world 2 assets">
-   		<img src="images/7.jpg" alt="world 2 assets">
-   		<img src="images/6.jpg" alt="world 2 assets">
-   		<img src="images/8.jpg" alt="world 2 assets">
-   		<img src="images/9.jpg" alt="world 2 assets">
-   		<img src="images/10.jpg" alt="world 2 assets">
-   		<i class="fa fa-caret-up" aria-hidden="true"></i>
-   		<p class="caption">Many elements were designed to be seamlessly tiled.</p>
-    </article>
-    <!-- InstanceEndEditable -->
-    <article id="clickouts">
-		<a class="button" href="../index.html">Home</a>
-	</article>	
-	
-</div>
+
+  <section id='loading'>
+    <img src='images/loading.gif' alt='now loading'>
+  </section>
+  <div id="content">
+    <section class="tiles">
+
+      <div class='tileText col-100 row-auto p-b-0'>
+        <a href='index.html'>
+      <img src='images/catface.png' id='catface'>
+    </a>
+      </div>
+    </section>
+    <section class="tiles">
+      <div class="tileText col-100">
+
+        <h1>Fishy Flop</h1>
+        <p>UI and gameplay assets for a mobile game</p>
+        <img src='fishyflop/images/fishyFlopHero-large.gif'>
+        <table>
+          <tr>
+            <td>
+              <h3>Client</h3>
+            </td>
+            <td>
+              <p>The Fishy Flop Team</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <h3>Role</h3>
+            </td>
+            <td>
+              <p>UI Designer, Visual Designer</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <h3>Tools</h3>
+            </td>
+            <td>
+              <p>Adobe Illustrator</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <h3>Status</h3>
+            </td>
+            <td>
+              <p><a href='https://play.google.com/store/apps/details?id=com.WouldBeCool.FishyFlop'>Available for download from the Google Play Store</a></p>
+            </td>
+          </tr>
+        </table>
+        <h2>Concept</h2>
+        <p><i>Fishy Flop</i> is a fin-tastic mobile game by The Fishy Flop Team. The game combines the physics of games like <i>Angry Birds</i> with the quirky controls of games like <i>QWOP</i>.</p>
+        <p>I ensured that the game featured intuitive interfaces and vibrant, contemporary visuals.</p>
+        <h2>The Fishy Flop Team</h2>
+        <ul>
+          <li><a href="https://www.linkedin.com/in/brian-mah-633b39126/">Brian Mah</a>, Lead Developer</li>
+          <li><a href="https://www.linkedin.com/in/alex-jungroth-561282112/">Alex Jungroth</a>, Developer</li>
+          <li>Daniel Schlesinger, Developer</li>
+          <li><a href="https://jordanhmusic.com/">Jordan Henderson</a>, Music, Audio</li>
+          <li>Me, Visuals and Interfaces</li>
+        </ul>
+
+        <h2>Samples</h2>
+        <img src="fishyflop/images/7.jpg" alt="world 2 assets">
+        <img src="fishyflop/images/1.jpg" alt="world 1 assets">
+        <img src="fishyflop/images/2.jpg" alt="world 1 assets">
+        <i class="fa fa-caret-up" aria-hidden="true"></i>
+        <p class="caption">Two styles were established to differentiate background and foreground elements.</p>
+        <img src="fishyflop/images/3.jpg" alt="ui assets">
+        <img src="fishyflop/images/5.jpg" alt="world 1 assets">
+        <img src="fishyflop/images/4.jpg" alt="world 2 assets">
+        <img src="fishyflop/images/6.jpg" alt="world 2 assets">
+        <img src="fishyflop/images/8.jpg" alt="world 2 assets">
+        <img src="fishyflop/images/9.jpg" alt="world 2 assets">
+        <img src="fishyflop/images/10.jpg" alt="world 2 assets">
+        <i class="fa fa-caret-up" aria-hidden="true"></i>
+        <p class="caption">Many elements were designed to be seamlessly tiled.</p>
+      </div>
+      <div class="tileText col-100 row-auto">
+        <a class='button' href='arirang/index.html'>Previous project: Arirang Visualization</a> <a class='button' href='breathe/index.html'>Next project: Breathe California Rebranding</a> </div>
+    </section>
+    <section class="tiles">
+
+      <div class="tileText col-100 row-auto p-t-0">
+        <p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
+
+        <a class="button button-pink" href="index.html">Work</a>
+
+        <a class="button button-green" href="about/index.html">About me</a>
+
+        <a class="button button-cyan" href="contact/index.html">Contact</a>
+
+        <a class="button" href="https://www.facebook.com/dereyesdesign">
+      <i class="fa fa-facebook-official"></i>
+    </a>
+
+        <a class="button" href="https://www.instagram.com/dereyesdesign/">
+      <i class="fa fa-instagram"></i>
+    </a>
+
+        <a class="button" href="https://twitter.com/dereyesdesign">
+      <i class="fa fa-twitter"></i>
+    </a>
+      </div>
+    </section>
+  </div>
 </body>
-<!-- InstanceEnd --></html>
+
+</html>
