--- a/index.html
+++ b/index.html
@@ -1,189 +1,197 @@
 <!doctype html>
-<html lang="en"><!-- InstanceBegin template="/Templates/main.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+
 <head>
-	<meta charset="utf-8">
-	<title>Darin E. Reyes</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--Libraries-->
-	<!--jQuery-->
-    <script type="text/javascript" src="lib/jquery-3.2.1.min.js"></script>
-	<!--Typekit-->
-	<script src="https://use.typekit.net/ftq0ggh.js"></script>
-	<script>try{Typekit.load({ async: true });}catch(e){}</script>
-  	<!--JS-->
-  	<script src="js/main.js" type="text/javascript"></script>
-  	<!--CSS-->
-   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   	<link rel="stylesheet" href="css/main.css"/>
-   	<link rel="stylesheet" href="css/loading.css"/>
-   	<link rel="stylesheet" href="css/header.css"/>
-    <!--Favicon-->
-    <link rel="shortcut icon" href="images/favicon.png" type="image/png"/>
-    <!--Google analytics-->
-    <script>
-        console.log('analytics');
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-85708609-1', 'auto');
-        ga('send', 'pageview');
-    </script>
-	<!--Space for extra scripts-->
-	<!-- InstanceBeginEditable name="head" -->
-    <link rel="stylesheet" href="css/home.css"/>
-    <script src="lib/TweenMax.min.js" type="text/javascript"></script>
-    <script src="lib/ScrollMagic.min.js" type="text/javascript"></script>
-    <script src="lib/animation.gsap.min.js" type="text/javascript"></script>
-    <script src="lib/ScrollToPlugin.min.js" type="text/javascript"></script>
-    <script src="lib/jquery.drawsvg.min.js" type="text/javascript"></script>
-    <script src="js/home.js" type="text/javascript"></script>
-    <!--    <script src="_js/intro.js" type="text/javascript"></script>-->
-    <!-- InstanceEndEditable -->
+  <base href="" />
+
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Darin E. Reyes / Home</title>
+  <!--libs-->
+  <!--jquery-->
+  <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+  <!--typekit-->
+  <script src='https://use.typekit.net/ftq0ggh.js'></script>
+  <script>
+    try {
+      Typekit.load({
+        async: true
+      });
+    } catch (e) {}
+
+  </script>
+  <!--Favicon-->
+  <link rel='shortcut icon' href='images/favicon.png' type='image/png' />
+  <!--Google analytics-->
+  <script>
+    console.log('analytics');
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-85708609-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+  <!--fontawesome-->
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+
+  <!--css-->
+  <link rel='stylesheet' href='css/loading.css' />
+  <link rel='stylesheet' href='css/components.css' />
+  <link rel='stylesheet' href='css/typography.css' />
+  <link rel='stylesheet' href='css/utilities.css' />
+  <link rel='stylesheet' href='css/structure.css' />
+  <link rel='stylesheet' href='css/header.css' />
 </head>
+
 <body>
-<header>
-	<div id="topDesktop">
-		<div id="topMobile">
-			<a href="index.html" class="button" id="pageName">Darin E. Reyes Design</a>
-   			<a class="button" id="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></a>
-   		</div>
-   		<nav id="tabs">
-        	<a class="button" sort="work" href="index.html#work">Work</a>
-        	<a class="button" sort="aboutMe" href="index.html#aboutMe">About Me</a>
-        	<a class="button" sort="contact" href="index.html#contact">Contact</a>
-        	<a class="button" sort="all" href="index.html#all">All</a>
-    	</nav>
-	</div>
-    	<nav id="social">
-        	<a class="button" href="http://facebook.com/dereyesdesign">
-        		<i class="fa fa-facebook-official"></i>
-        	</a>
-        	<a class="button" href="http://instagram.com/dereyesdesign">
-        		<i class="fa fa-instagram"></i>
-        	</a>
-        	<a class="button" href="https://twitter.com/dereyesdesign">
-        		<i class="fa fa-twitter"></i>
-        	</a>
-    	</nav>
-</header>
-<div id="content">
-   <section id="loading">
-		<img src="images/loading.gif">
-	</section>
-    <!-- InstanceBeginEditable name="Content" -->
-        <!--Content here-->
-        <section id="top" class="intro widthWindow">
-            <iframe class="aspect16x9" src="https://player.vimeo.com/video/243570108" width="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            <p>“Thank You” to everyone who made <a href="gato/index.html">Gato</a> possible.</p>
-            <p>I'm a Visual Designer and Creative Coder living in Sacramento, California.</p>
-            <p>I use <b>light, sound, and code</b> to connect humans.</p>
-        </section>
-        <section id="timeline">
-            <i class="fa fa-caret-down" aria-hidden="true"></i>
-        </section>
-        <section id="allAnchor"></section>
-        <section class="sectionTiles" id="workAnchor">
-            <h1 class="work">New</h1>
-            <article class="work projectData" projectTag="gato">
-                <!--
-			<aside>
-				<p><i>Gato</i> will be open at the Crocker Museum of Art in Sacramento, California until October 2017.</p>
-			</aside>
--->
-            </article>
-        </section>
-        <section class="sectionTiles">
-            <h1 class="work">20<br>17</h1>
-            <article class="work projectData" projectTag="breathe"></article>
-        </section>
-        <section class="sectionTiles" id="aboutMeAnchor">
-            <h1 class="work aboutMe">20<br>16</h1>
-            <article class="aboutMe recognition">
-                <div class="node"></div>
-                <h3>Crocker Art Museum</h3>
-                <p>ArtSpots Artist in Residence</p>
-            </article>
-            <article class="aboutMe education ">
-                <div class="node"></div>
-                <h3>University of California, Davis</h3>
-                <p>BA in Design, Graphics /Interactive Emphasis</p>
-            </article>
-            <article class="work projectData" projectTag="fishyFlop"></article>
-            <article class="work projectData" projectTag="arirang"></article>
-            <article class="aboutMe recognition">
-                <div class="node"></div>
-                <h3>AIGA SF</h3>
-                <p>Enrichment Scholarship</p>
-            </article>
-            <article class="aboutMe recognition">
-                <div class="node"></div>
-                <h3>International Symposium on Electronic Art</h3>
-                <p>Presenter with Abstract Published</p>
-            </article>
-            <article class="aboutMe recognition">
-                <div class="node"></div>
-                <h3>Hong Kong Polytechnic University</h3>
-                <p>Guest Lecturer on Design for Social Change</p>
-            </article>
-            <article class="work projectData" projectTag="soundScapesII"></article>
-            <article class="work projectData" projectTag="soundScapesI"></article>
-            <article class="aboutMe recognition ">
-                <div class="node"></div>
-                <h3>UC Davis Undergraduate Research Conference</h3>
-                <p>Presenter with Abstract Published</p>
-            </article>
-            <article class="work projectData" projectTag="disQuiet"></article>
-        </section>
-        <section class="sectionTiles">
-            <h1 class="work">20<br>15</h1>
-            <article class="work projectData" projectTag="audioVisuals"></article>
-        </section>
-        <section class="sectionTiles">
-            <h1 class="aboutMe">Pre-History</h1>
-            <article class="aboutMe education ">
-                <div class="node"></div>
-                <h3>Los Angeles Mission College</h3>
-                <p>AA in Art</p>
-            </article>
-            <article class="aboutMe life ">
-                <div class="node"></div>
-                <p>Born in Los Angeles, California</p>
-            </article>
-        </section>
-        <section id="contactAnchor" class="heightWindow">
-            <h1 class="work aboutMe">Contact</h1>
-            <form id="gform" method="POST" class="full" action="https://script.google.com/macros/s/AKfycbw3OqF_yQ8S1gdTuYfLyZzbsuCunk3iZi0sjvdwcARh_XocHwjt/exec">
-                <fieldset>
-                    <label for="name">Name: </label>
-                    <input id="name" name="name" />
-                </fieldset>
-                <fieldset>
-                    <label for="message">Message: </label>
-                    <textarea id="message" name="message" rows="6"></textarea>
-                </fieldset>
-                <fieldset>
-                    <label for="email">Email Address:</label>
-                    <input id="email" name="email" type="email" value="" required />
-                    <span id="email-invalid" style="visibility:hidden">
-        Must be a valid email address</span>
-                </fieldset>
-                <button class="button">Send</button>
-            </form>
-            <div class="full" style="display:none;" id="thankyou_message">
-                <p>Message sent. Expect a response shortly.</p>
-            </div>
-            <!-- submit the form using AJAX -->
-            <script data-cfasync="false" type="text/javascript" src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
-        </section>
-        <!-- InstanceEndEditable -->
-</div>
+
+  <section id='loading'>
+    <img src='images/loading.gif' alt='now loading'>
+  </section>
+  <div id="content">
+    <section class="tiles">
+
+      <div class='tileText col-100 row-auto p-b-0'>
+        <a href='index.html'>
+      <img src='images/catface.png' id='catface'>
+    </a>
+      </div>
+
+      <div class="tileText col-100 row-auto p-t-0">
+        <p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
+
+        <a class="button button-pink" href="index.html">Work</a>
+
+        <a class="button button-green" href="about/index.html">About me</a>
+
+        <a class="button button-cyan" href="contact/index.html">Contact</a>
+
+        <a class="button" href="https://www.facebook.com/dereyesdesign">
+      <i class="fa fa-facebook-official"></i>
+    </a>
+
+        <a class="button" href="https://www.instagram.com/dereyesdesign/">
+      <i class="fa fa-instagram"></i>
+    </a>
+
+        <a class="button" href="https://twitter.com/dereyesdesign">
+      <i class="fa fa-twitter"></i>
+    </a>
+      </div>
+    </section>
+    <section class="tiles">
+      <div class="tileTitle">
+        <h1>Latest<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
+      </div>
+
+      <a id='gato' class='tileProject' style='
+        background:url("gato/images/gatoHero.gif");
+        background-position: center;
+        background-size: cover;
+      ' href='gato/index.html'>
+        <div class='tileProjectInfo'>
+          <h2>Gato</h2>
+          <p>Interactive installation for babies, children, and their caretakers</p>
+        </div>
+      </a>
+      <a class="tileBigText col-lg-2" style="background:url('gato/images/gatoVideoPreview.gif');background-position:center;" href="https://vimeo.com/243570108">
+        <div class="tileBigTextInfo">
+          <h1>Watch the mini-doc on Vimeo</h1>
+        </div>
+      </a>
+    </section>
+    <section class="tiles">
+      <div class="tileTitle">
+        <h1>Upcoming <i class="fa fa-caret-down" aria-hidden="true"></i></h1>
+      </div>
+      <div class="tileText">
+        <p>3/10<br>Concert visualization<br>w/ Joe Kye<br>Sofia Tsakopoulous Center for the Arts, Sacramento, CA</p>
+        <a class="button" href="https://www.ticketfly.com/event/1617985-joe-kye-sacramento/">Tickets</a>
+      </div>
+      <div class="tileText">
+        <p>4/19<br>Concert visualization<br>w/ The Hot Baked Goods<br>Crocker Art Museum, Sacramento, CA</p>
+        <a class="button" href="https://www.crockerart.org/event/1560/2018-04-19">Tickets</a>
+      </div>
+    </section>
+    <section class="tiles">
+      <div class="tileTitle">
+        <h1>2017<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
+      </div>
+
+      <a id='breathe' class='tileProject' style='
+        background:url("breathe/images/breatheHero.jpg");
+        background-position: center;
+        background-size: cover;
+      ' href='breathe/index.html'>
+        <div class='tileProjectInfo'>
+          <h2>Breathe California Rebranding</h2>
+          <p>Marketing materials for a local non-profit</p>
+        </div>
+      </a>
+    </section>
+    <section class="tiles">
+      <div class="tileTitle">
+        <h1>2016<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
+      </div>
+
+      <a id='fishyflop' class='tileProject' style='
+        background:url("fishyflop/images/fishyFlopHero.gif");
+        background-position: center;
+        background-size: cover;
+      ' href='fishyflop/index.html'>
+        <div class='tileProjectInfo'>
+          <h2>Fishy Flop</h2>
+          <p>UI and gameplay assets for a mobile game</p>
+        </div>
+      </a>
+
+      <a id='arirang' class='tileProject' style='
+        background:url("arirang/images/heroArirang.gif");
+        background-position: center;
+        background-size: cover;
+      ' href='arirang/index.html'>
+        <div class='tileProjectInfo'>
+          <h2>Arirang Visualization</h2>
+          <p>Live interactive concert visuals</p>
+        </div>
+      </a>
+
+      <a id='disquiet' class='tileProject' style='
+        background:url("disquiet/images/heroDisQuiet.gif");
+        background-position: center;
+        background-size: cover;
+      ' href='disquiet/index.html'>
+        <div class='tileProjectInfo'>
+          <h2>DisQuiet Prototype</h2>
+          <p>Musical relaxation app for depression and anxiety</p>
+        </div>
+      </a>
+    </section>
+    <section class="tiles">
+      <div class="tileTitle">
+        <h1>2015<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
+      </div>
+
+      <a id='audiovisuals' class='tileProject' style='
+        background:url("audiovisuals/images/heroAudioVisuals.gif");
+        background-position: center;
+        background-size: cover;
+      ' href='audiovisuals/index.html'>
+        <div class='tileProjectInfo'>
+          <h2>AudioVisuals</h2>
+          <p>Music visualizer</p>
+        </div>
+      </a>
+    </section>
+  </div>
 </body>
-<!-- InstanceEnd --></html>
+
+</html>
